--- a/css/main.css
+++ b/css/main.css
@@ -177,10 +177,10 @@ header {
 	width: 100%;
 	padding-bottom: 30px;
 }
-/* PC용 슬라이드영역은 숨김처리 */
-.main_rolling_pc {display: none;}
-/* 모바일슬라이드영역 */
-.main_rolling_mobile {display:block;}
+/*모바일+ PC 공통 슬라이드영역은 보이게처리 */
+.main_rolling_pc {display: block;}
+/* 모바일슬라이드영역 숨김처리 */
+.main_rolling_mobile {display:none;}
 .swiper-slide img {width: 100%; height:300px;}
 .swiper-pagination-bullet {
 	width: 5px !important; height: 5px !important;
@@ -191,7 +191,90 @@ header {
 .swiper-pagination-bullet-active {
 	opacity: 1 !important;/* 투명도 100% */
 }
-/* //모바일슬라이드영역 */
+/* //모바일슬라이드영역 숨김처리 */
+
+/* 슬라이드영역 */
+.main_rolling_mobile {
+    display: none;
+  }
+  .main_rolling_pc {
+    display: block;
+  }
+  .visualRoll {
+    position: relative;
+    width: 100%;
+  }
+  .viewImgList {
+    position: relative;
+    width: 100%;
+  }
+  ul.viewImgList li {
+    text-align: center;
+    height: 550px;
+    line-height: 550px;
+    background-size: 100% 550px;
+    width: 100%;
+  }
+  .roll_content a img {
+    display: none;
+  }
+  li.imglist0 {
+    position: relative;
+    z-index: 50;
+    background: url(../img/slide_01.jpg) no-repeat;
+  }
+  li.imglist1 {
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    background: url(../img/slide_02.jpg) no-repeat;
+  }
+  li.imglist2 {
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    background: url(../img/slide_03.jpg) no-repeat;
+  }
+  .roll_content {
+    position: relative;
+  }
+  .roll_content .roll_txtline {
+    position: absolute;
+    left: 0;
+    bottom: 60px;
+    width: 100%;
+    line-height: 1;
+    text-align: center;
+    font-size: 22px;
+    color: #fff;
+    letter-spacing: 2px;
+  }
+  .rollbtnArea {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 25px;
+    z-index: 200;
+  }
+  .rollingbtn {
+    width: 320px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .rollingbtn li.butt0 {
+    margin-left: 10px;
+  }
+  .rollingbtn li {
+    display: inline-block;
+    margin-left: 5px;
+  }
+  .rollingbtn li a {
+    vertical-align: top;
+  }
+  /* //슬라이드영역 */
+
 /* 겔러리최근게시물영역 */
 .about_area h2 {
 	font-size:20px;
